  For instance detect duplicates =http://foo= and =https://foo=.
+ Support user-define read/write hooks so that bookmarks can be automatically
  imported, say, from Firefox, or exported to a SQLite database or a custom text
  format.

** TASK 1.3.3
- Move the ~search-engines~ slot from the ~window~ class to the
  ~remote-interface~ class.
- Rename ~new-buffer~, ~new-window~ and ~make-visible-new-buffer~ to
  ~make-buffer~, ~make-window~ and ~make-buffer-focus~.

** DONE 1.3.2
- Hooks for commands, modes and various UI or networking events.

  Hooks are lists which the user can fill with /handlers/ to perform arbitrary
  actions on specific events, such as after the creation of a buffer, on
  start/exit, when a download has finished, before/after the execution of any
  command, or when enabling/disabling a mode.

  *Note:* Hooks are still experimental and their API is likely to change in the future.

- New ~open-file~ command (=C-x C-f=).

  This new command allows to open a file from the file system.

  The user is prompted with the minibuffer, files are browsable with the fuzzy completion.

  The default directory is the one from the download manager.

  Press =Enter= to  visit a file, =M-Left= or =C-l=  to go one directory
  up, =M-Right= or =C-j= to browse the directory at point.

  By default, it uses the =xdg-open=  command. The user can override the
  =next:*open-file-function*= variable  with a new function,  which takes the
  filename  (or directory  name) as  parameter.  See the  manual for  an
  example.

  The default keybinding is =C-x C-f=.

  *Note:* This feature is experimental and is meant to grow in future versions
  of Next!

- New ~paste-from-ring~ command. (Thanks to Solomon Block.)

  All copied text snippets are saved in a clipboard "ring."  Any snippet can be
  fuzzy-searched and pasted later.

- New ~minibuffer-history~ command (=M-p=).

  This allows to fuzzy-search the history of minibuffer inputs.  Some minibuffers