@@ -60,8 +60,11 @@ MAJOR.MINOR.PATCH, we increment the:
 ** TASK 1.3.3
 - Move the ~search-engines~ slot from the ~window~ class to the
   ~remote-interface~ class.
+
 - Rename ~new-buffer~, ~new-window~ and ~make-visible-new-buffer~ to
   ~make-buffer~, ~make-window~ and ~make-buffer-focus~.
+
+- Rename ~document-mode~ to ~web-mode~.
 
 ** DONE 1.3.2
 - Hooks for commands, modes and various UI or networking events.
